return an unmodifiable list in gaugesForNodegit push